variables.RunHalf.scala.error
Compilation error:
RunHalf:10: error: not found: value doite
    doite()
    ^